syntax = "proto3";

package consortium;

service PersonService {
  rpc ListPersons (ListPersonsRequest) returns (ListPersonsResponse);
  rpc GetPerson (GetPersonRequest) returns (GetPersonResponse);
  rpc CreatePerson (CreatePersonRequest) returns (CreatePersonResponse);
  rpc UpdatePerson (UpdatePersonRequest) returns (UpdatePersonResponse);
  rpc DeletePerson (DeletePersonRequest) returns (DeletePersonResponse);
}

service PlanService {
  rpc ListPlans (ListPlansRequest) returns (ListPlansResponse);
  rpc GetPlan (GetPlanRequest) returns (GetPlanResponse);
  rpc CreatePlan (CreatePlanRequest) returns (CreatePlanResponse);
  rpc UpdatePlan (UpdatePlanRequest) returns (UpdatePlanResponse);
  rpc DeletePlan (DeletePlanRequest) returns (DeletePlanResponse);
}

service ContractedPlanService {
  rpc ListContractedPlans (ListContractedPlansRequest) returns (ListContractedPlansResponse);
  rpc GetContractedPlan (GetContractedPlanRequest) returns (GetContractedPlanResponse);
  rpc CreateContractedPlan (CreateContractedPlanRequest) returns (CreateContractedPlanResponse);
  rpc UpdateContractedPlan (UpdateContractedPlanRequest) returns (UpdateContractedPlanResponse);
  rpc DeleteContractedPlan (DeleteContractedPlanRequest) returns (DeleteContractedPlanResponse);
  rpc ListByPerson (ListByPersonRequest) returns (ListByPersonResponse);
  rpc ListByStatus (ListByStatusRequest) returns (ListByStatusResponse);
}

message Person {
  int32 id = 1;
  string name = 2;
  string cpf = 3;
  string email = 4;
  string phone = 5;
}

message ListPersonsRequest {
  int32 page = 1;
  int32 limit = 2;
}

message ListPersonsResponse {
  repeated Person persons = 1;
  int32 total = 2;
  int32 page = 3;
  int32 total_pages = 4;
}

message GetPersonRequest {
  int32 id = 1;
}

message GetPersonResponse {
  Person person = 1;
}

message CreatePersonRequest {
  string name = 1;
  string cpf = 2;
  string email = 3;
  string phone = 4;
}

message CreatePersonResponse {
  Person person = 1;
}

message UpdatePersonRequest {
  int32 id = 1;
  string name = 2;
  string cpf = 3;
  string email = 4;
  string phone = 5;
}

message UpdatePersonResponse {
  Person person = 1;
}

message DeletePersonRequest {
  int32 id = 1;
}

message DeletePersonResponse {
  bool success = 1;
  string message = 2;
}

message Plan {
  int32 id = 1;
  string name = 2;
  int32 credit_value = 3;
  int32 installments = 4;
  int32 admin_fee_percentage = 5;
}

message ListPlansRequest {
  int32 page = 1;
  int32 limit = 2;
}

message ListPlansResponse {
  repeated Plan plans = 1;
  int32 total = 2;
  int32 page = 3;
  int32 total_pages = 4;
}

message GetPlanRequest {
  int32 id = 1;
}

message GetPlanResponse {
  Plan plan = 1;
}

message CreatePlanRequest {
  string name = 1;
  int32 credit_value = 2;
  int32 installments = 3;
  int32 admin_fee_percentage = 4;
}

message CreatePlanResponse {
  Plan plan = 1;
}

message UpdatePlanRequest {
  int32 id = 1;
  string name = 2;
  int32 credit_value = 3;
  int32 installments = 4;
  int32 admin_fee_percentage = 5;
}

message UpdatePlanResponse {
  Plan plan = 1;
}

message DeletePlanRequest {
  int32 id = 1;
}

message DeletePlanResponse {
  bool success = 1;
  string message = 2;
}

message ContractedPlan {
  int32 id = 1;
  int32 person_id = 2;
  int32 plan_id = 3;
  string contract_date = 4;
  string status = 5;
  int32 paid_installments = 6;
  Person person = 7;
  Plan plan = 8;
}

message ListContractedPlansRequest {
  int32 page = 1;
  int32 limit = 2;
}

message ListContractedPlansResponse {
  repeated ContractedPlan contracted_plans = 1;
  int32 total = 2;
  int32 page = 3;
  int32 total_pages = 4;
}

message GetContractedPlanRequest {
  int32 id = 1;
}

message GetContractedPlanResponse {
  ContractedPlan contracted_plan = 1;
}

message CreateContractedPlanRequest {
  int32 person_id = 1;
  int32 plan_id = 2;
  string contract_date = 3;
  string status = 4;
  int32 paid_installments = 5;
}

message CreateContractedPlanResponse {
  ContractedPlan contracted_plan = 1;
}

message UpdateContractedPlanRequest {
  int32 id = 1;
  int32 person_id = 2;
  int32 plan_id = 3;
  string contract_date = 4;
  string status = 5;
  int32 paid_installments = 6;
}

message UpdateContractedPlanResponse {
  ContractedPlan contracted_plan = 1;
}

message DeleteContractedPlanRequest {
  int32 id = 1;
}

message DeleteContractedPlanResponse {
  bool success = 1;
  string message = 2;
}

message ListByPersonRequest {
  int32 person_id = 1;
  int32 page = 2;
  int32 limit = 3;
}

message ListByPersonResponse {
  repeated ContractedPlan contracted_plans = 1;
  int32 total = 2;
}

message ListByStatusRequest {
  string status = 1;
  int32 page = 2;
  int32 limit = 3;
}

message ListByStatusResponse {
  repeated ContractedPlan contracted_plans = 1;
  int32 total = 2;
}
